<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@color/bg_color"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/record_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/record_button"
            app:layout_constraintRight_toRightOf="@+id/record_button"
            app:layout_constraintTop_toTopOf="@+id/record_button"
            app:layout_constraintBottom_toBottomOf="@+id/record_button"
            app:lottie_autoPlay="false"
            app:lottie_fileName="layer.json"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:lottie_loop="true"/>

        <ImageView
            android:id="@+id/record_button"
            android:layout_width="286dp"
            android:layout_height="286dp"
            android:src="@drawable/record_play"
            android:onClick="onSpeechButtonClicked"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"/>



        <TextView
            android:id="@+id/record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/record_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxWidth="210dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/go_to_record_text" />

        <LinearLayout
            android:id="@+id/checkmark1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_title">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/onboarding_checkmark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_food_check1_title"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/check1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speech_food_check1_text"
            app:layout_constraintTop_toBottomOf="@+id/checkmark1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkmark1"
            app:layout_constraintRight_toRightOf="@+id/checkmark1" />


        <LinearLayout
            android:id="@+id/checkmark2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check1_text">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/onboarding_checkmark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_food_check2_title"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speech_food_check2_text"
            app:layout_constraintTop_toBottomOf="@+id/checkmark2"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkmark2"
            app:layout_constraintRight_toRightOf="@+id/checkmark2" />
        
        <ImageView
            android:id="@+id/analyzing_speech"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/analyze_speech"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>